cursive-bootstrap/tests/ui/E-CON/E-CON-0120.cursive
// RUN: compile-fail
// DIAG: E-CON-0120
// SPEC: 8.9
// DESC: Implicit capture of unique binding

procedure capture_unique(domain: $ExecutionDomain) -> () {
    let x: unique i32 = 42
    parallel domain {
        spawn {
            let y: i32 = x  //~ ERROR E-CON-0120: implicit capture of unique
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
